@@ -18,52 +18,57 @@ package com.echothree.control.user.core.server.command;
 
 import com.echothree.control.user.core.common.form.GetEntityAttributeGroupsForm;
 import com.echothree.control.user.core.common.result.CoreResultFactory;
-import com.echothree.control.user.core.common.result.GetEntityAttributeGroupsResult;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.data.core.server.entity.EntityAttributeGroup;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.model.data.user.server.entity.UserVisit;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetEntityAttributeGroupsCommand
-        extends BaseSimpleCommand<GetEntityAttributeGroupsForm> {
+        extends BaseMultipleEntitiesCommand<EntityAttributeGroup, GetEntityAttributeGroupsForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.EntityAttributeGroup.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of(
+        );
     }
-    
+
     /** Creates a new instance of GetEntityAttributeGroupsCommand */
     public GetEntityAttributeGroupsCommand(UserVisitPK userVisitPK, GetEntityAttributeGroupsForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
-    @Override
-    protected BaseResult execute() {
-        var coreControl = getCoreControl();
-        GetEntityAttributeGroupsResult result = CoreResultFactory.getGetEntityAttributeGroupsResult();
-        UserVisit userVisit = getUserVisit();
 
-        result.setEntityAttributeGroups(coreControl.getEntityAttributeGroupTransfers(userVisit, null));
+    @Override
+    protected Collection<EntityAttributeGroup> getEntities() {
+        var coreControl = getCoreControl();
+
+        return coreControl.getEntityAttributeGroups();
+    }
+
+    @Override
+    protected BaseResult getTransfers(Collection<EntityAttributeGroup> entities) {
+        var result = CoreResultFactory.getGetEntityAttributeGroupsResult();
+
+        if(entities != null) {
+            result.setEntityAttributeGroups(getCoreControl().getEntityAttributeGroupTransfers(getUserVisit(), entities, null));
+        }
 
         return result;
     }
